--- a/src/dashBoard.ejs
+++ b/src/dashBoard.ejs
@@ -7,20 +7,138 @@
     <title>Document</title>
     <script src="js/sidebar.js"></script>
     <link rel="stylesheet" href="css/sidebar.css">
-
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="gridstack/gridstack.css" />
+    <script src="gridstack/jQuery.js"></script>
+    <script src="gridstack/gridstack_all.js"></script>
+    <style>
+        html {
+            background-color: #393345; /* Switch */
+        }
+        .dashboard-header {
+            width : 100%;
+            height : 50px;
+            border-radius : 15px;
+            background-color: #1F1E2E;
+            
+        }
+        .dashboard-header i {
+            margin-left : 15px;
+            font-size : 2.2em;
+            color : #73737D; /* Switch */
+            cursor : pointer;
+        }
+        .dashboard-body {
+            /*width : 100%;*/
+            min-height: 845px;
+            border-radius : 15px;
+            margin-top: 15px;
+            background-color: #1F1E2E; /* Switch */
+            padding: 15px;
+            /*background: radial-gradient( at 60% 15%,#1E3A79,#142440,#142440);*/
+        }
+        .side-menu {
+            background: linear-gradient(to bottom,#D450C4,#BA53F4);
+        }
+
+        .item-content {
+            background-color: #27283C;
+            margin: 5px;
+            border-radius: 15px;
+            height: 100%;
+        }
+        .item-contents-header {
+            background-color: #32334d;
+            height: 33px;
+            justify-content: space-between;
+            align-items: center;
+            color : #a6a6b5;
+            display: flex;
+            padding-left: 10px;
+            padding-right: 10px;
+            border-radius: 10px;
+        }
+        .item-contents-edit i{
+            color: #5f5573;
+            cursor: pointer;
+        }
+        .grid-stack {
+
+        }
+    </style>
 </head>
 <body>
-    <body>
-        <div id="body-shade">asd</div>
-        <nav class="real-menu" role="navigation">            
-            <ul>
-                <li><a href="#">Item 1</a></li>
-                <li><a href="#">Item 2</a></li>
-                <li><a href="#">Item 3</a></li>
-            </ul>
-        </nav>
-        <button id="open-menu">Open menu</button>
-    </body>
+    <div id="body-shade">asd</div>
+    <nav class="side-menu" role="navigation">            
+        <ul>
+            <li><a href="#">Item 1</a></li>
+            <li><a href="#">Item 2</a></li>
+            <li><a href="#">Item 3</a></li>
+        </ul>
+    </nav>
+    
+    <div class="dashboard-header">
+        <span><a class="waves-effect waves-light btn-small" id="open-menu"><i class="material-icons">dashboard</i></a></span>
+    </div>
+
+    <div class="dashboard-body">
+        <div class="grid-stack" data-gs-current-height="10">
+
+
+            <div style="overflow:hidden;" class="grid-stack-item"  data-gs-width="5" data-gs-height="5" data-gs-x="0" data-gs-y="0">
+                <div class="item-content grid-stack-item-content" style="overflow-y: hidden;">
+                    <header class="item-contents-header">{inputData.title}
+                        <div class="item-contents-edit">
+                            <i class="material-icons" style="font-size: 1.2em; position: relative; top: -2px;">build</i> 
+                            <i class="material-icons">cancel</i>
+                        </div>
+                    </header>
+                    <div id="dialog_${inputData.id}" class="editDialog" style="display:none;">
+                        <div class="editDialog_detail">
+                            ${inputData.editDialog}
+                            <button onclick="editContents()">적용</button>
+                        </div>
+                    </div>
+                    <div id='contents' style="height: 93%;">
+                    </div>
+                </div>
+            </div>
+            
+
+        </div>
+    </div>
+    <script>
+        $(document).ready(function() {
+          
+            $('.grid-stack').gridstack({
+                resizable: {
+                    handles: 'se, sw'
+                },
+            });
+
+            var el = `<div style="overflow:hidden;" class="grid-stack-item"  data-gs-width="5" data-gs-height="5" data-gs-x="6" data-gs-y="3">
+                <div class="item-content grid-stack-item-content" style="overflow-y: hidden;">
+                    <header class="item-contents-header">{inputData.title}
+                        <div class="item-contents-edit">
+                            <i class="material-icons" style="font-size: 1.2em; position: relative; top: -2px;">build</i> 
+                            <i class="material-icons">cancel</i>
+                        </div>
+                    </header>
+                    <div id="dialog_4563" class="editDialog" style="display:none;">
+                        <div class="editDialog_detail">
+                            3456
+                            <button onclick="editContents()">적용</button>
+                        </div>
+                    </div>
+                    <div id='contents' style="height: 93%;">
+                    </div> 
+                </div>
+            </div>`
+            var grid = $('.grid-stack').data('gridstack');
+            grid.addWidget(el, 5, 5, 1, 10, true);
+            grid.addWidget(el, 8, 4, 1, 5, false);
+
+        });
+    </script>
 </body>
 </html>
