--- a/src/dashBoard.ejs
+++ b/src/dashBoard.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,115 +17,34 @@
     <script src="materialize/materialize.js"></script>
     <title>Document</title>
     
-    <style>
-        html {
-            background-color: #393345; /* Switch */
-        }
-        .dashboard-header {
-            width : 100%;
-            height : 50px;
-            border-radius : 15px;
-            background-color: #1F1E2E;
-            
-        }
-        .dashboard-header i {
-            margin-left : 15px;
-            font-size : 2.2em;
-            color : #a6a6b5; /* Switch */
-            cursor : pointer;
-        }
-        .dashboard-header>a i {
-            font-size : 1.5em;
-        }
-        .dashboard-body {
-            /*width : 100%;*/
-            min-height: 980px;
-            border-radius : 15px;
-            margin-top: 10px;
-            background-color: #1F1E2E; /* Switch */
-            padding: 15px;
-            /*background: radial-gradient( at 60% 15%,#1E3A79,#142440,#142440);*/
-        }
-        .side-menu {
-            background: linear-gradient(to bottom, #f3f3f3, #ffffff, #c9a0ff);
-        }
-
-        .item-content {
-            background-color: #27283C;
-            margin: 5px;
-            border-radius: 3%;
-            height: 100%;
-        }
-        .item-contents-header {
-            background-color: #32334d;
-            height: 33px;
-            justify-content: space-between;
-            align-items: center;
-            color : #a6a6b5;
-            display: flex;
-            padding-left: 10px;
-            padding-right: 10px;
-            border-radius: 10px;
-        }
-        .item-contents-edit{
-            display: flex;
-            align-items: center;
-        }
-        .item-contents-edit i{
-            color: #5f5573;
-            cursor: pointer;
-        }
-        .widget-dropdown-btn, .header-btn {
-            color: #5f5573;
-            border-left : 1px solid #5f5573;
-            padding-left: 15px;
-            padding-right: 15px;
-        }
-
-        .dashboard-sidebar {
-            width: 93px;
-            position: absolute;
-            height: 100%;
-            clear: both;
-            top: -1px;
-            display: flex;
-            justify-content: center;
-            flex-direction: column
-        }
-        .dashboard-sidebar i{
-            color: #a6a6b5;
-            font-size: 3em;
-            cursor: pointer;
-        }
-        .dashboard-sidebar-logo {
-            height: 50px;
-            margin: 15px 15px 6px 15px;
-            text-align: center;
-        }
-        .dashboard-sidebar-logo ::hover{
-
-        }
-        .dashboard-sidebar-header {
-            margin-left:1px;
-            top:-15px;
-            margin-bottom:27px;
-            height: 100%;
-            width: 100%;
-            justify-content: center;
-            color : #a6a6b5;
-            border-radius : 15px;
-            background: linear-gradient(to bottom, #f3f3f3, #ffffff, #c9a0ff);
-        }
-        
-    </style>
+    <link rel="stylesheet" href="css/blackThema.css"/>
+    <link rel="stylesheet" href="css/whiteThema.css"/>
 </head>
 <body>
     <div class="dashboard-sidebar">
         <div class="dashboard-sidebar-logo">
-            <span ><a class="" id="open-menu"><i class="material-icons">dashboard</i></a></span>
+            <span ><a class=""><i class="material-icons">dashboard</i></a></span>
         </div>
-        <div  class="dashboard-sidebar-header">
-
+        <div class="dashboard-sidebar-header">
+            <div class="dashboard-sidebar-body">
+                <p><i class="material-icons">featured_play_list</i><span class="dashboard-sidebar-body-content">Hello</span></p>
+                <p><i class="material-icons">grid_on</i><span class="dashboard-sidebar-body-content">It's<span></p>
+                <p><i class="material-icons">web</i><span class="dashboard-sidebar-body-content">Me<span></p>
+            </div>
+            <div class="dashboard-sidebar-footer">
+                <p>
+                    <!-- Switch -->
+                    <span class="switch" id="themeSwitch">
+                        <label>
+                        <input type="checkbox" checked>
+                        <span class="lever"></span>
+                        </label>
+                    </span>
+                    <span style="font-size: 0.8em; margin-left:120px;">
+                        <a href="#"><i class="material-icons">add</i></a>
+                    </span>
+                </p>
+            </div>
         </div>
     </div> 
     <div id="body-shade">asd</div>
@@ -141,8 +60,8 @@
             <span style="color: #a6a6b5; width:200px; text-align: center; font-size: 1.8em;">Dashboard</span>
 
             <ul id="widget-dropdown" class="dropdown-content">
-                <li><a href="#!">one<span class="badge">1</span></a></li>
-                <li><a href="#!">two<span class="new badge">1</span></a></li>
+                <li><a href="#!">one</a></li>
+                <li><a href="#!">two</a></li>
                 <li><a href="#!">three</a></li>
             </ul>
             <a class="widget-dropdown-btn dropdown-trigger" href="#!" data-target="widget-dropdown"><span style="vertical-align: middle">위젯</span><i class="material-icons right">arrow_drop_down</i></a>
@@ -200,6 +119,37 @@
         $('.compact-trigger').click(function() {
             grid.compact();
         });
+
+        $('#themeSwitch').change(function (e) {
+            if($(e.target).prop('checked')) {
+                //다크
+                console.log('다크')
+                $('html').attr('thema','')
+                $('.dashboard-header').attr('thema','')
+                $('.dashboard-body').attr('thema','')
+                $('.item-content').attr('thema','')
+                $('.item-contents-header').attr('thema','')
+                $('.item-contents-edit').attr('thema','')
+                $('.header-btn').attr('thema','')
+                $('.widget-dropdown-btn').attr('thema','')
+                $('.dashboard-sidebar-logo').attr('thema','')
+                $('.dashboard-sidebar-header').attr('thema','')
+
+            } else {
+                //화이트
+                console.log('화이트')
+                $('html').attr('thema','white')
+                $('.dashboard-header').attr('thema','white')
+                $('.dashboard-body').attr('thema','white')
+                $('.item-content').attr('thema','white')
+                $('.item-contents-header').attr('thema','white')
+                $('.item-contents-edit').attr('thema','white')
+                $('.header-btn').attr('thema','white')
+                $('.widget-dropdown-btn').attr('thema','white')
+                $('.dashboard-sidebar-logo').attr('thema','white')
+                $('.dashboard-sidebar-header').attr('thema','white')
+            }
+        })
     </script>
 </body>
 </html>
