--- a/public/css/whiteThema.css
+++ b/public/css/whiteThema.css
@@ -28,7 +28,7 @@ html[thema='white'] {
     /*background: radial-gradient( at 60% 15%,#1E3A79,#142440,#142440);*/
 }
 .side-menu[thema='white'] {
-    background: linear-gradient(to bottom, #313A46, #313A46, rgb(64, 74, 185));
+    background: linear-gradient(to bottom, #313A46, #313A46, #4b5081);
 }
 
 .item-content[thema='white'] {
@@ -64,13 +64,14 @@ html[thema='white'] {
 }
 
 .dashboard-sidebar[thema='white'] {
+    position: fixed;
+    justify-content: start;
     width: 93px;
-    position: absolute;
     height: 100%;
     clear: both;
+    z-index: 999;
     top: -1px;
     display: flex;
-    justify-content: center;
     flex-direction: column
 }
 .dashboard-sidebar-logo[thema='white'] i{
@@ -90,9 +91,9 @@ html[thema='white'] {
     height: 100%;
     width: 100%;
     justify-content: center;
-    color : #a6a6b5;
+    color : #dcdefc;
     border-radius : 15px;
-    background: linear-gradient(to bottom, #313A46, #313A46, rgb(64, 74, 185));
+    background: linear-gradient(to bottom, #313A46, #313A46, #42477d);
     z-index: 999;
     padding-left: 23px;
     transition: ease 0.2s all;
@@ -125,7 +126,7 @@ html[thema='white'] {
 
 }
 .dashboard-sidebar-footer[thema='white'] i{
-    color: #4e30b0;
+    color: #dcdefc;
 }
 .dashboard-sidebar-footer[thema='white'] i:hover{
     color: #a6a6b5 !important; 
