--- a/src/dashBoard.ejs
+++ b/src/dashBoard.ejs
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/blackThema.css"/>
     <link rel="stylesheet" href="css/whiteThema.css"/>
     <link rel="stylesheet" href="ol/ol.css"/>
+    <link rel="stylesheet" href="css/header_media.css"/>
+    <link rel="stylesheet" href="billboard/billboard.css"/>
 </head>
 <body>
     <div class="dashboard-sidebar">
@@ -57,14 +59,13 @@
     </nav> -->
     <div style="margin-left:100px;">
         <div class="dashboard-header">
-            <span style="color: #a6a6b5; width:200px; text-align: center; font-size: 1.8em;">Dashboard</span>
-
+            <span class="dashboard-header-title">Dashboard</span>
             <ul id="widget-dropdown" class="dropdown-content">
-                <li><a href="#!">지도</a></li>
-                <li><a href="#!">차트</a></li>
-                <li><a href="#!">스텟</a></li>
-                <li><a href="#!">리스트</a></li>
-                <li><a href="#!">텍스트</a></li>
+                <li><a href="#!" widget_type="map">지도</a></li>
+                <li><a href="#!" widget_type="chart">차트</a></li>
+                <li><a href="#!" widget_type="stat">스텟</a></li>
+                <li><a href="#!" widget_type="list">리스트</a></li>
+                <li><a href="#!" widget_type="text">텍스트</a></li>
             </ul>
             <a class="widget-dropdown-btn dropdown-trigger" href="#!" data-target="widget-dropdown"><span style="vertical-align: middle">위젯</span><i class="material-icons right">arrow_drop_down</i></a>
             <a class="header-btn compact-trigger" href="#!"><span>정렬</span><i class="material-icons right">clear_all</i></a>
@@ -82,6 +83,8 @@
     <script src="js/widgetTemplete.js"></script>
     <script src="ol/ol.js"></script>
     <script src="gridstack/jQuery_touch.min.js"></script>
+    <script src="billboard/d3_v4.min.js"></script>
+    <script src="billboard/billboard.js"></script>
     <script src="js/testData.js"></script>
     <script>
         var grid;
@@ -99,13 +102,34 @@
                 float: true
             });
             grid = $('.grid-stack').data('gridstack');
-            grid.removeAll();
 
             redraw(grid);
 
             //위젯 삭제
             $('.widgetCancel').on('click', function (e) {
                 $(e.target).parents('.grid-stack-item')[0].remove();
+            })
+
+            //위젯 추가
+            $('#widget-dropdown a').on('click', function (e) {
+                
+                var widget = {
+                    widgetSeq : testData.widgetCurrentSeq+1,
+                    widgetName : '예시' + (testData.widgetCurrentSeq+1),
+                    type : $(e.target).attr('widget_type'),
+                    coord : {
+                        x:0,
+                        y:0,
+                        w:3,
+                        h:5
+                    },
+                    properties : {
+
+                    }
+                }
+                testData.widgetList.push(widget);
+                testData.widgetCurrentSeq += 1;
+                redraw (grid);
             })
 
             //리사이즈
@@ -119,6 +143,8 @@
                         map.updateSize();
                         break;
                     case 'chart' :
+                        var chart = $(e.target).children(0).children('#contents').children(0).data('chart');
+                        chart.resize({height: parseInt($(e.target).children(0).children('#contents').height()/25)*25})
                         break;
                     case 'stat' :
                         break;
@@ -137,5 +163,6 @@
         
     </script>
     <script src="js/dashBoard.js"></script>
+    
 </body>
 </html>
