--- a/public/css/blackThema.css
+++ b/public/css/blackThema.css
@@ -94,10 +94,11 @@ html {
     color : #a6a6b5;
     border-radius : 15px;
     background: linear-gradient(to bottom, #f3f3f3, #ffffff, #c9a0ff);
-    z-index: 999;
+    z-index: 2;
     padding-left: 23px;
     transition: ease 0.2s all;
     overflow: hidden;
+    box-shadow: 2px 2px 2px 2px #393345;
 }
 .dashboard-sidebar-header:hover {
     width: 300%;
