--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -37,3 +37,37 @@
 .dashboard-header-title {
   color: #a6a6b5; width:200px; text-align: center; font-size: 1.8em;
 }
+
+#addDashboard_modal {
+  visibility: hidden;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width:100%;
+  height:100%;
+  text-align:center;
+  z-index: 1001;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity:0;
+  background: rgba(0, 0, 0, 0.5);
+  transition: 0.2s;
+}
+
+#addDashboard_modal[class='active'] {
+  visibility: visible;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  opacity:1;
+  width:100%;
+  height:100%;
+  text-align:center;
+  z-index: 1001;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+  transition: 0.7s;
+}
