--- a/src/dashBoard.ejs
+++ b/src/dashBoard.ejs
@@ -22,40 +22,17 @@
     <link rel="stylesheet" href="css/header_media.css"/>
     <link rel="stylesheet" href="billboard/billboard.css"/>
     <style>
-         #addDashboard_modal {
-            visibility: hidden;
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            width:100%;
-            height:100%;
-            text-align:center;
-            z-index: 1001;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity:0;
-            background: rgba(0, 0, 0, 0.5);
-            transition: 0.7s;
-        }
 
-        #addDashboard_modal[class='active'] {
-            visibility: visible;
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            opacity:1;
-            width:100%;
-            height:100%;
-            text-align:center;
-            z-index: 1001;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background: rgba(0, 0, 0, 0.5);
-            transition: 0.7s;
+        .dashboard_modal {
+            width: 300px; 
+            height: 200px; 
+            background: #f3f3f3; 
+            border-radius: 10px;
+            padding: 15px 25px 15px 25px;
         }
-
+        #newDashboardInput {
+            width: 80%;
+        }
     </style>
 </head>
 <body>
@@ -79,7 +56,7 @@
                         </label>
                     </span>
                     <span style="font-size: 0.8em; margin-left:120px;">
-                        <a class="sidebar-btn add-trigger" href="#"><i class="material-icons">add</i></a>
+                        <a class="sidebar-btn add-trigger" href=""><i class="material-icons">add</i></a>
                     </span>
                 </p>
             </div>
@@ -94,8 +71,13 @@
         </ul>
     </nav> -->
     <div id="addDashboard_modal">
-        <div class="dashboard_modal" style="width: 300px; height: 200px; background: #f3f3f3; border-radius: 10px;">
-            <p>Content you want the user to see goes here.</p>
+        <div class="dashboard_modal">
+            <h5>새 대시보드 생성</h5>
+            <hr>
+            <div>
+                <span>명칭 : </span><input type="text" id="newDashboardInput">
+                <button onclick="fnNewDashboard()">생성</button>
+            </div>
         </div>
     </div>
 
@@ -147,29 +129,10 @@
 
         });
 
-        function overlay() {
-            el = $('#addDashboard_modal');
-            if(el.hasClass('active')) {
-                el.removeClass('active')
-            } else {
-                el.addClass('active')
-            }
-            //el.style.visibility = (el.style.visibility == "visible") ? "hidden" : "visible";
+        $('.dashboard-sidebar-body p').click(function(e) {
             
-        }
-
-        $('.add-trigger').click(function () {
-            // document.getElementById('body-shade').style.display= 'block'
-            overlay()
         })
 
-        $('#addDashboard_modal').click(function (e) {
-            e.preventDefault();
-            if(!$(e.target).hasClass("dashboard_modal")) {
-                //console.log('영역밖입니다.')    
-                overlay()
-            }
-        })
     </script>
     <script src="js/dashBoard.js"></script>
     
