--- a/src/dashBoard.ejs
+++ b/src/dashBoard.ejs
@@ -121,7 +121,8 @@
                     handles: 'se, sw'
                 },
                 alwaysShowResizeHandle: /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent),
-                float: true
+                float: true,
+                verticalMargin: 8,
             });
             grid = $('.grid-stack').data('gridstack');
 
