--- a/public/css/blackThema.css
+++ b/public/css/blackThema.css
@@ -34,7 +34,7 @@ html {
 .item-content {
     background-color: #27283C;
     margin: 5px;
-    border-radius: 3%;
+    /* border-radius: 3%; */
     height: 100%;
 }
 .item-contents-header {
@@ -46,7 +46,7 @@ html {
     display: flex;
     padding-left: 10px;
     padding-right: 10px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 .item-contents-edit{
     display: flex;
