--- a/public/gridstack/gridstack.css
+++ b/public/gridstack/gridstack.css
@@ -43,10 +43,12 @@
     margin: 0;
     position: absolute;
     top: 0;
-    left: 10px;
-    right: 10px;
+    left: 5px;
+    right: 5px;
     bottom: 0;
-    width: auto;
+    /* width: auto; */
+    width: 97%;
+    border-radius: 15px;
     overflow-x: hidden;
     overflow-y: auto
 }
