--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -71,3 +71,43 @@
   background: rgba(0, 0, 0, 0.5);
   transition: 0.7s;
 }
+
+.editDialog {
+  display: flex;
+  background: rgba(0, 0, 0, 0.5);
+  transition: 0.2s;
+  opacity:0;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 33px;
+  visibility: hidden;
+}
+
+.editDialog[class='editDialog active'] {
+  display: flex;
+  background: rgba(0, 0, 0, 0.5);
+  transition: 0.7s;
+  opacity:1;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  visibility: visible;
+}
+
+.editDialog_detail {
+  width: 70%;
+  height: 70%;
+  align-items: center;
+  margin: auto;
+  justify-content: center;
+  display: flex;
+  border-radius: 15px;
+  background: azure;
+}
