--- a/src/dashBoard.ejs
+++ b/src/dashBoard.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
+    <link rel="icon" href="img/title.png" />
+    <title>Dashboard</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="materialize/materialize.min.css">
     <script src="js/sidebar.js"></script>
@@ -15,14 +16,13 @@
     <script src="gridstack/gridstack_all.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="materialize/materialize.js"></script>
-    <title>Document</title>
     <link rel="stylesheet" href="css/blackThema.css"/>
     <link rel="stylesheet" href="css/whiteThema.css"/>
     <link rel="stylesheet" href="ol/ol.css"/>
     <link rel="stylesheet" href="css/header_media.css"/>
     <link rel="stylesheet" href="billboard/billboard.css"/>
     <style>
-
+        /* 좌측 대시보드 목록 모달창 css */
         .dashboard_modal {
             width: 300px; 
             height: 200px; 
